--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "~1.0.1",
-    "vue-template-compiler": "^2.6.11",
-    "vue-meta": "^2.4.0"
+    "vue-template-compiler": "^2.6.11"
   }
 }
